--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Free Services
+                Services
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="404error.html"> Free Services</a></li>
+                <li><a class="dropdown-item" href="services.html">Paid Services</a></li>
+                 
               </ul>
             </li>
              
