--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 
 <div class="middle-container">
     <div class="profile">
-      <img class="profilephoto" src="images/profilepic2.jpeg" alt="profile">
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player class="profilephoto" src="https://assets10.lottiefiles.com/packages/lf20_C0QBH09bFB.json"  background=""  speed="0.9"  style="width: 250px; height: 250px;" hover loop  autoplay></lottie-player>
+      
        <div class="middle-container-2">
       <h1 class="hello">Hello.</h1>
        </div>
