--- a/404error.html
+++ b/404error.html
@@ -25,10 +25,10 @@
 
             <div class="contant_box_404">
               <h3 class="h2">
-                Look like you're lost
+                Looks like you're lost
               </h3>
 
-              <p>the page you are looking for not available!</p>
+              <p>the page you are looking for is not available!</p>
 
               <a href="index.html" class="link_404">Go to Home</a>
             </div>
