--- a/services.html
+++ b/services.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title> prajwal rode </title>
+
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   
    
@@ -11,7 +12,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link rel="stylesheet" href="css/styles.css">
  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-
+ <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet"> 
 
 </head>
 
@@ -65,14 +66,29 @@
 
 <!---  navbar ends -->
 
-<div class="service-container-1">
-  <h1 class="heading1">
-    Services
-  </h1>
-  <h3 class="sub-heading1">Don't Worry ! We've got your back</h3>
-  
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player class="service-container-1-lottie" src="https://assets5.lottiefiles.com/packages/lf20_5szujujo.json"  background="transparent"  speed="0.6"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player class="service-container-2-lottie" src="https://assets5.lottiefiles.com/packages/lf20_5szujujo.json"  background="transparent"  speed="0.6"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
-</div>
+<!-- intro -->
+
+
+<section id="intro">
+  <div class="row">
+    <div class=" intro-box col-lg-4">
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+      <lottie-player class="intro-animation1" src="https://assets5.lottiefiles.com/packages/lf20_5szujujo.json"  background="transparent"  speed="0.6"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+    </div>
+    <div class="intro-box col-lg-4">
+      <h1 class="heading1">
+        Services
+      </h1>
+      <h3 class="sub-heading1">Don't Worry ! We've got your back</h3>
+      
+    </div>
+    <div class="intro-box col-lg-4">
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player class="intro-animation2" src="https://assets5.lottiefiles.com/packages/lf20_5szujujo.json"  background="transparent"  speed="0.6"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+    </div>
+  </div>
+</section>
+
+<!-- intro section ends  -->
+
+ 
