--- a/services.html
+++ b/services.html
@@ -72,8 +72,7 @@
 <section id="intro">
   <div class="row">
     <div class=" intro-box col-lg-4">
-      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player class="intro-animation1" src="https://assets5.lottiefiles.com/packages/lf20_5szujujo.json"  background="transparent"  speed="0.6"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+      <img src="images/goal-flag.png" class="intro-image1">
     </div>
     <div class="intro-box col-lg-4">
       <h1 class="heading1">
@@ -83,12 +82,16 @@
       
     </div>
     <div class="intro-box col-lg-4">
-      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player class="intro-animation2" src="https://assets5.lottiefiles.com/packages/lf20_5szujujo.json"  background="transparent"  speed="0.6"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+      <img src="images/goal-flag.png" class="intro-image2"> 
     </div>
   </div>
 </section>
 
 <!-- intro section ends  -->
 
- 
+ <div>
+  hiuhjiluhfgs
+ </div>
+ <div>
+  <hi>hdukcbvy</hi>
+ </div>
